2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/02_ClassAttPROTECTED.deca
// Description:
//    Programme definir une class avec juste un champ protected non initialisé
// Resultats:
//      Programme correcte
//
// Historique:
//    cree le 15/01/2024
class A {
    protected int x;
}